[+] Добавлена спецификация Исправлены ошибки
