# OpenApi.yml
@@ -300,6 +300,8 @@ paths:
                 $ref: '#/components/schemas/Error'
     get:
       summary: Получить все свои посты
+      security:
+        - bearerAuth: [ ]
       parameters:
         - in: query
           name: pageNumber
@@ -336,6 +338,8 @@ paths:
                 $ref: '#/components/schemas/Error'
     put:
       summary: Изменить пост по ID
+      security:
+        - bearerAuth: [ ]
       parameters:
         - in: path
           name: id
@@ -382,6 +386,8 @@ paths:
                 $ref: '#/components/schemas/Error'
     delete:
       summary: Удалить пост по ID
+      security:
+        - bearerAuth: [ ]
       parameters:
         - in: path
           name: id
@@ -413,6 +419,8 @@ paths:
   /feed:
     get:
       summary: Получить ленту новостей
+      security:
+        - bearerAuth: [ ]
       parameters:
         - in: query
           name: pageNumber
@@ -450,6 +458,8 @@ paths:
   /notification/all:
     get:
       summary: Получить все уведомления
+      security:
+        - bearerAuth: [ ]
       parameters:
         - in: query
           name: pageNumber
@@ -481,6 +491,8 @@ paths:
   /notification:
     get:
       summary: Получить новые уведомления
+      security:
+        - bearerAuth: [ ]
       responses:
         '200':
           description: Успешная операция
@@ -557,9 +569,6 @@ components:
           items:
             type: string
             format: binary
-      required:
-        - title
-        - text
     PostDTO:
       type: object
       properties:
@@ -591,8 +600,8 @@ components:
     NotificationType:
       type: string
       enum:
-        - TYPE_1
-        - TYPE_2
+        - FRIEND_REQUEST
+        - DIALOG
       description: The type of notification.
 
   securitySchemes:
